# parma59_bot

./: .gitignore  Dockerfile  bot_help  cat_bot.py  echo_bot.py  echo_bot_test.py  first.py  main.py  openRC_help  pyproject.toml  quote_every_day_from_bd.py  stop_bot.sh  test1.py  test2.py  word_every_day.py
config/: config.py
files/: bot_help  help_db.txt  openRC_help  text_modified  text_modified.txt  text_raw  text_raw.txt
lessons/: decoratos.py  psycopg2_.py
other/: echo_bot.py  echo_bot_test.py  first.py  long_poling.py  psy_copy.py  psycopg2_.py  test1.py
sevices/: file_worker.py  get_quote.py  get_quote_from_db.py  get_quote_from_file.py  record_db.py  test1.py  work_with_bd.py
work_with_db/: get_quote_from_db.py  record_db.py  work_with_bd.py
