[tool.poetry]
name = "parma-bot"
version = "0.1.0"
description = ""
authors = ["gas <pankot222@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
aioschedule = "^0.5.2"
apscheduler = "^3.10.4"
pytz = "^2024.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
